--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "rollup -c",
     "test": "jest",
     "dev": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "postversion": "git push --follow-tags"
   },
   "repository": {
     "type": "git",
