Apply suggestion from @Aldemylla
Co-authored-by: Aldemylla <aldemylla@gmail.com>

--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -3,7 +3,8 @@ name: Publish to NPM
 on:
   push:
     tags:
-      - '*'
+      - '*.*.*'
+      - '*.*.*-staging'
 
 permissions:
   contents: write
