--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "jest",
     "dev": "tsc --watch",
     "prepublishOnly": "npm run build",
-    "postversion": "git push --follow-tags"
+    "postversion": "git push --follow-tags",
+    "lint": "eslint src --ext .js"
   },
   "repository": {
     "type": "git",
@@ -41,8 +42,13 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@types/jest": "^29.5.11",
     "babel-jest": "^29.7.0",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "globals": "^16.5.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prettier": "^3.7.4",
     "rollup": "^4.9.4",
     "typescript": "^5.3.3"
   }
