--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Run unit tests with coverage
-        run: npx jest --coverage
+        run: npm run test --coverage
 
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
