--- a/package.json
+++ b/package.json
@@ -51,5 +51,11 @@
     "prettier": "^3.7.4",
     "rollup": "^4.9.4",
     "typescript": "^5.3.3"
+  },
+  "resolutions": {
+    "source-map": "^0.7.4"
+  },
+  "overrides": {
+    "source-map": "^0.7.4"
   }
 }
